2008-06-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 535949 – annotate g_strip_context and g_dpgettext with
	G_GNUC_FORMAT

	* glib/gstrfuncs.h:
	* glib/glib.symbols: Annotate some functions with G_GNUC_FORMAT.
	Patch by Christian Persch

2008-06-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 539067 – The document g_io_channel_win32_new_fd() says that "Your
	code should call only g_io_channel_read()." but gio_channel_read() is
	deprecated

	* glib/giochannel.h: Fix a reference in a comment
	Patch by Hiroyuki Ikezoe 

2008-06-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 537635 – Corrections and improvements to
	g_time_val_from_iso8601()/g_time_val_to_iso8601()

	* glib/gtimer.c (g_time_val_from_iso8601): set tv_usec to 0 rather 
	than 1 when a fraction of a second is not specified
	(g_time_val_from_iso8601): calculate a fraction of a second
	correctly even in case it does not happen to consist of exactly 
	six digits; do not allow random data after the ISO 8601 string,
	only whitespace
	(make g_time_val_to_iso8601): support fractions of a second
	Patch by Peter Kjellerstedt

	* tests/testglib.c: Update to match

2008-06-16  Christian Persch  <chpe@gnome.org>

	* glib/gbookmarkfile.c
	* glib/gconvert.c
	* glib/gfileutils.c
	* glib/giochannel.c
	* glib/giounix.c
	* glib/giowin32.c
	* glib/gkeyfile.c
	* glib/gregex.c
	* glib/gshell.c
	* glib/gspawn-win32.c
	* glib/gutf8.c: Use g_set_error_literal where appropriate. Patch from 
	bug #535947.

2008-06-16  Christian Persch  <chpe@gnome.org>

	* docs/reference/glib/glib-sections.txt:
	* glib/gerror.c:
	* glib/gerror.h:
	* glib/glib.symbols: Add g_set_error_literal. Bug #535947.

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* glib/goption.c (dgettext_swapped): changed return value to
	const gchar* to fix warning.

2008-06-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtestutils.c: Move docs around

	* glib/gchecksum.h: Add docs.

2008-06-13  Matthias Clasen  <mclasen@redhat.com>
